# m-spdz

./: README.md  test1  test1.c  test2  test2.c  test3  test3.c  test4  test4.c  test5  test5.c  test6  test6.cpp
math/: gfq.h  mac_check.h
network/: broadcast_io.h  network.h
offline/mspdz/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
offline/mspdz/vole/: CMakeLists.txt  CTestTestfile.cmake  Makefile  base_vole.cpp  cmake_install.cmake  pre.cpp  vole_triple.cpp  vole_triple_new.cpp
online/: 20Asiacrypt.h  20Asiacrypt_128(multi-threads).h  20Asiacrypt_128.h  20Asiacrypt_mpir.h  CompactTag.h  m_spdz(multi-threads).h  m_spdz.h  m_spdz_mpir.h  m_spdz_mpir_256.h  omp.h  spdz(new).h  spdz.h  spdz_mpir.h  utility.h
pre_data/: input_x.txt  input_y.txt  test.txt  triple_a.txt  triple_b.txt  triple_c.txt
pre_data/predata_python/: generate_matrix_c.py  generate_random.py  generate_scalar_key.py  generate_scalar_mac.py
pre_data/predata_spdz/: a.txt  b.txt  c.txt  input_x.txt  input_y.txt  key.txt  mac_a.txt  mac_b.txt  mac_c.txt  mac_x.txt  mac_y.txt
pre_data/py(mod 2^64)/: direct_valuate.py  generate_matrix_c.py  generate_random.py  generate_transposition.py  generate_vector_key.py  generate_vector_mac.py
pre_data/py(mod p)/: generate_matrix_c.py  generate_random.py  generate_scalar_key.py  generate_scalar_mac.py  generate_transposition.py  (+2 more)
test/: file.cpp  mat_mul.cpp  mat_mul_mpir.cpp  mat_mul_mpir_256.cpp  mul(new).cpp  mul.cpp  mul_Asia20.cpp  mul_Asia20_128.cpp  mul_Asia20_mpir.cpp  mul_CompactTag.cpp  mul_mpir.cpp
(+110 files in other folders)
